Effect Strip added to a nested Metastrip gets duplicate name (thus inherits fcurves from other Strips) #90737

Closed
opened 2021-08-17 17:10:18 +02:00 by Jonata Bolzan · 10 comments

System Information
Operating system: Ubuntu Linux 20.04
Graphics card: NVS 3100M/PCIe/SSE2

Blender Version
Caused by bbb1936411

Short description of error

Creating an Effect Strip for Transform, for example, inside a nested Metastrip, it would inherit the fcurves from another Transform Strip

Exact steps for others to reproduce the error
#90737.blend

  • open above .blend
  • then Add > Effect Strip > Transform to MetaStrip.004
  • see the resulting Transform strip getting a false ( because already in use ) name: should be called "Transform.002" (but is called "Transform")
  • therefor it is already getting an FCurve

Or you can follow the steps on the attached video to see what happens.
simplescreenrecorder-2021-08-17_12.03.04.mkv
this is the file with the duplicate already
metastrip_bug.blend

**System Information** Operating system: Ubuntu Linux 20.04 Graphics card: NVS 3100M/PCIe/SSE2 **Blender Version** Caused by bbb1936411 **Short description of error** Creating an Effect Strip for Transform, for example, inside a nested Metastrip, it would inherit the fcurves from another Transform Strip **Exact steps for others to reproduce the error** [#90737.blend](https://archive.blender.org/developer/F10287354/T90737.blend) - open above .blend - then `Add` > `Effect Strip` > `Transform` to `MetaStrip.004` - see the resulting `Transform` strip getting a false ( because already in use ) name: should be called "Transform.002" (but is called "Transform") - therefor it is already getting an FCurve --- Or you can follow the steps on the attached video to see what happens. [simplescreenrecorder-2021-08-17_12.03.04.mkv](https://archive.blender.org/developer/F10286431/simplescreenrecorder-2021-08-17_12.03.04.mkv) this is the file with the duplicate already [metastrip_bug.blend](https://archive.blender.org/developer/F10286430/metastrip_bug.blend)
Author

Added subscriber: @jonata

Added subscriber: @jonata
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Can confirm.

at this point, there are duplicates in the GHash.
Assume this is related to same problem as in {#90595}? (Transform being a nested struct not identifying its strip correctly?)

Getting this:

BLI_assert failed: source/blender/blenlib/intern/BLI_ghash.c:462, ghash_insert_ex(), at '(gh->flag & GHASH_FLAG_ALLOW_DUPES) || (BLI_ghash_haskey(gh, key) == 0)'
Can confirm. at this point, there are duplicates in the GHash. Assume this is related to same problem as in {#90595}? (Transform being a nested struct not identifying its strip correctly?) Getting this: ``` BLI_assert failed: source/blender/blenlib/intern/BLI_ghash.c:462, ghash_insert_ex(), at '(gh->flag & GHASH_FLAG_ALLOW_DUPES) || (BLI_ghash_haskey(gh, key) == 0)' ```
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Philipp Oeser changed title from Effect Strip added to a nested Metastrip inherits fcurves from other Strips to Effect Strip added to a nested Metastrip gets duplicate name (thus inherits fcurves from other Strips) 2021-08-18 11:17:13 +02:00
Philipp Oeser self-assigned this 2021-08-18 12:29:12 +02:00
Member

Caused by bbb1936411

Think I got a fix for this.

Caused by bbb1936411 Think I got a fix for this.

This issue was referenced by 3fa1de6ad6

This issue was referenced by 3fa1de6ad68b1e3b22c5c30dc039820a1c36c2d4

This issue was referenced by 787350dde8

This issue was referenced by 787350dde8aec3caf8660c749e1847ff406974c8
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Member

Added subscriber: @iss

Added subscriber: @iss
Member

I have pushed 787350dde8 now.

Unfortunately this does not mean your file is in a good state already.
As a workaround, you'll have to rename the strip (it got a non-unique name by accident/bug), see the commit for details.

@iss: if you've got a good way to repair these broken files, please go ahead (as a reminder, you'll get the following assert in such cases)

BLI_assert failed: source/blender/blenlib/intern/BLI_ghash.c:462, ghash_insert_ex(), at '(gh->flag & GHASH_FLAG_ALLOW_DUPES) || (BLI_ghash_haskey(gh, key) == 0)'
I have pushed 787350dde8 now. Unfortunately this does not mean your file is in a good state already. As a workaround, you'll have to rename the strip (it got a non-unique name by accident/bug), see the commit for details. @iss: if you've got a good way to repair these broken files, please go ahead (as a reminder, you'll get the following assert in such cases) ``` BLI_assert failed: source/blender/blenlib/intern/BLI_ghash.c:462, ghash_insert_ex(), at '(gh->flag & GHASH_FLAG_ALLOW_DUPES) || (BLI_ghash_haskey(gh, key) == 0)' ```
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#90737
No description provided.